workspace = { members = [ "Consistency_hash", "LinkedList", "bubble_sort","ex", "insertion_sort", "merge_sort", "quick_sort", "recursive", "selection_sort", "shell_sort"] }
[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
